# watch-rust-errors

./: Cargo.toml  README.md
src/: cargo.rs  main.rs  rust.rs  watcher.rs
