[package]
name = "watch-rust-errors"
version = "0.1.0"
authors = ["Rajasekharan Vengalil <avranju@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
glib = "0.9.0"
lazy_static = "1.4"
regex = "1.3"
vgtk = { git = "https://github.com/bodil/vgtk.git", rev = "a70fa146ed9cd9dc6040bd3bf5d0a31dc45a7f37" }
watchexec = { git = "https://github.com/avranju/watchexec", branch = "lib-support", default-features = false, features = ["lib"] }